update Collapse Nav

--- a/src/scss/_clock.scss
+++ b/src/scss/_clock.scss
@@ -1,6 +1,8 @@
 .clock {
-  width: 550px;
-  height: 550px;
+  width: 400px;
+  height: 400px;
   border: 10px;
-  border: medium;
+  border-width: 7px;
+  border-style: solid;
+  border-radius: 50%;
 }
