--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
-$pink: #f2a0a0;
+$pink: #f57272;
 $pink-dark: #b16b6b;
-$pink-light: #c7b0b0;
+$pink-light: #ddc4c4;
 
 $theme-colors: (
   (
@@ -34,3 +34,4 @@ $btn-focus-box-shadow: 0;
 $list-group-item-padding-x: 0;
 $list-group-item-padding-y: .25rem;
 $input-border-width: 0;
+$btn-disabled-opacity: .55;
