--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
 @import './_variables';
 @import '~bootstrap/scss/bootstrap';
 @import './sidebar';
+@import './clock';
+@import './lightlink';
+@import './scrollbar';
+@import './collapse-nav';
+@import './utils';
