--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import './_variables';
 @import '~bootstrap/scss/bootstrap';
+@import './mixin';
 @import './sidebar';
 @import './clock';
 @import './lightlink';
