--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,9 +29,9 @@ $spacers: (
   )
 );
 
-$input-btn-border-width: 0;
 $btn-focus-box-shadow: 0;
 $list-group-item-padding-x: 0;
 $list-group-item-padding-y: .25rem;
+$input-border-width: 0;
 $input-border-width: 0;
 $btn-disabled-opacity: .55;
