--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,7 +3,7 @@
 @import './mixin';
 @import './sidebar';
 @import './clock';
-@import './lightlink';
 @import './scrollbar';
 @import './collapse-nav';
+@import './buttons';
 @import './utils';
