--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -30,6 +30,7 @@ $body-bg: $gray-100;
 $input-bg: $gray-100;
 $list-group-bg: $gray-100;
 $component-active-bg: transparent;
+$border-color: $pink;
 
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg: $font-size-base * 1.25 !default;
@@ -51,3 +52,5 @@ $link-color: $pink;
 
 $list-group-item-padding-x: 0;
 $list-group-item-padding-y: 0.25rem;
+
+$transition-clock-roatet: rotate 1s linear;
