add record chart

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,6 +1,12 @@
 .w-100px {
   width: 100px;
 }
+.w-110px {
+  width: 110px;
+}
+.w-120px {
+  width: 120px;
+}
 .opacity-weak {
   opacity: .65 !important;
 }
