--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -31,3 +31,22 @@
     border-right-width: $border-width;
   }
 }
+@mixin scrollbar {
+  $border-radius: 3.5px;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 7px;
+    border-radius: $border-radius;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: $border-radius;
+    background-color: rgb(197, 197, 197);
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: $border-radius;
+    background-color: rgb(240, 240, 240);
+  }
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+}
